FIxed AVG and responsive

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </section>
       <h2>Pictures Gallery</h2>
       <section class="main__section2">
-        <article class="main__section2_article">
+        <article class="main__section2__article">
           <aside class="article__aside">
                 <h3>Picture1</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur ab ipsam odit, 
